change name description

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </section>
             <section>
                 <p>© Bureau Imaginaire</p>
-                <p>Réalisé par des déglingos</p>
+                <p class="little">Réalisé par Max Machin & Boris Tikhomiroff</p>
             </section>
         </footer>
     </article>
