--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <article>
         <header>
-            <h1>Site en construction - mise en ligne fin juillet</h1>
+            <h1>Site en construction - mise en ligne courant Août</h1>
             <!-- <h1>Bureau Imaginaire</h1> -->
         </header>
         <main>
@@ -38,8 +38,8 @@
                 <div>
                     <h2>Contact : </h2>
                     <div>
-                        <p>06 06 06 06 06 06</p>
-                        <p>email@mail.com</p>
+                        <p>06 31 62 89 07</p>
+                        <p>BUREAUIMAGINAIRE@gmail.com</p>
                     </div>
                 </div>
             </section>
