--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         </main>
         <footer>
             <section>
-                <div>
+                <!-- <div>
                     <h2>Suivez nous : </h2>
                     <ul>
                         <li><a href="#"><img src="./src/images/facebook.png" alt="facebook logo"></a></li>
                         <li><a href="#"><img src="./src/images/instagram.png" alt="instagram logo"></a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div>
                     <h2>Contact : </h2>
                     <div>
